--- a/index.html
+++ b/index.html
@@ -13,3 +13,34 @@ HINT for TODO 6: You can use the height attribute set to 200 to make the image s
 https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 
 <!-- TODO 7: Add the Contact Me and About Me page links -->
+
+<DOCTYPE html>
+    <html land="en">
+        <head>
+            <meta charset="UTF-8">
+            <title>CESAR ZOTES </title>
+        </head>
+        <body>
+            <h1>Cesar Zotes Porfolio</h1>
+            <h2>I am a new  Web Developer</h2>
+            <hr/>
+                <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
+                    <img
+                        height="500"
+                        src="./assets/images/movie-ranking.png" 
+                        alt="movie list screenshot"
+                     />
+                
+                <h3><a href="./public/birthday-invite.html">Birthday Invite Party</a></h3>
+                    <img 
+                        height="650"
+                        src="./assets/images/birthday-invite.png" 
+                        alt="cake image"
+                     />
+            <hr/>
+            <a href="./public/about.html">ABOUT ME</a><br/>
+            <a href="./public/contact.html">CONTACE ME</a>
+        </body>
+    </html>
+</DOCTYPE>
+
